--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# flyway database migrations
+spring.flyway.locations=classpath:db/migration
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:postgresql://localhost:5432/user_store
+spring.flyway.user=root
+spring.flyway.password=password
 
+# database properties
+spring.datasource.password=password
+spring.datasource.username=root
