--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,10 +2,11 @@ version: '3.1'
 services:
   postgres:
     image: postgres:13.3-alpine
-    restart: always
     ports:
-      - 5432:5432
+      - "5432:5432"
+    expose:
+      - 5432
     environment:
-      POSTGRES_DB: users
+      POSTGRES_DB: user_store
       POSTGRES_USER: root
       POSTGRES_PASSWORD: password
