show luke commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.flyway.user=root
 spring.flyway.password=password
 
 # database properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/user_store
 spring.datasource.password=password
 spring.datasource.username=root
